--- a/org.eclipse.xtext.doc/contents/350_continuous_integration.html
+++ b/org.eclipse.xtext.doc/contents/350_continuous_integration.html
@@ -116,7 +116,7 @@
     &lt;dependency&gt;
       &lt;groupId&gt;org.eclipse.emf&lt;/groupId&gt;
       &lt;artifactId&gt;org.eclipse.emf.mwe2.launch&lt;/artifactId&gt;
-      &lt;version&gt;2.9.1.201705291010&lt;/version&gt;
+      &lt;version&gt;2.10.0&lt;/version&gt;
     &lt;/dependency&gt;
     &lt;dependency&gt;
       &lt;groupId&gt;org.eclipse.xtext&lt;/groupId&gt;
@@ -147,7 +147,7 @@
 <pre><code class="language-xml">&lt;plugin&gt;
   &lt;groupId&gt;org.apache.maven.plugins&lt;/groupId&gt;
   &lt;artifactId&gt;maven-clean-plugin&lt;/artifactId&gt;
-  &lt;version&gt;2.5&lt;/version&gt;
+  &lt;version&gt;3.1.0&lt;/version&gt;
   &lt;configuration&gt;
     &lt;filesets&gt;
 		&lt;fileset&gt;
@@ -254,6 +254,54 @@ The second way is to use eclipse <a href="https://wiki.eclipse.org/Tycho/Target_
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td><a href="http://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.17.0/">2.17.0</a></td>
+      <td><a href="http://download.eclipse.org/releases/2019-03">2.16.0</a> (2.12.0)</td>
+      <td><a href="http://download.eclipse.org/modeling/emft/mwe/updates/releases/2.9.0/">2.9.0</a> (2.7.1)</td>
+      <td><a href="http://download.eclipse.org/modeling/m2t/xpand/updates/releases/R201605260315">2.2.0</a> (1.4)</td>
+      <td><a href="http://download.eclipse.org/releases/2019-03">4.11.0</a> (4.7.3)</td>
+      <td><a href="http://download.eclipse.org/releases/2019-03">2019-03</a></td>
+    </tr>
+    <tr>
+      <td><a href="http://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.16.0/">2.16.0</a></td>
+      <td><a href="http://download.eclipse.org/releases/2018-12/201812191000">2.16.0</a> (2.12.0)</td>
+      <td><a href="http://download.eclipse.org/modeling/emft/mwe/updates/releases/2.9.0/">2.9.0</a> (2.7.1)</td>
+      <td><a href="http://download.eclipse.org/modeling/m2t/xpand/updates/releases/R201605260315">2.2.0</a> (1.4)</td>
+      <td><a href="http://download.eclipse.org/releases/2018-12/201812191000">4.10.0</a> (4.7.3)</td>
+      <td><a href="http://download.eclipse.org/releases/2018-12/201812191000">2018-12</a></td>
+    </tr>
+    <tr>
+      <td><a href="http://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.15.0/">2.15.0</a></td>
+      <td><a href="http://download.eclipse.org/releases/2018-09/201809191002">2.15.0</a> (2.12.0)</td>
+      <td><a href="http://download.eclipse.org/modeling/emft/mwe/updates/releases/2.9.0/">2.9.0</a> (2.7.1)</td>
+      <td><a href="http://download.eclipse.org/modeling/m2t/xpand/updates/releases/R201605260315">2.2.0</a> (1.4)</td>
+      <td><a href="http://download.eclipse.org/releases/2018-09/201809191002">4.9.0</a> (4.7.3)</td>
+      <td><a href="http://download.eclipse.org/releases/2018-09/201809191002">2018-09</a></td>
+    </tr>
+    <tr>
+      <td><a href="http://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.14.0/">2.14.0</a></td>
+      <td><a href="http://download.eclipse.org/releases/photon/201806271001">2.14.0</a> (2.12.0)</td>
+      <td><a href="http://download.eclipse.org/modeling/emft/mwe/updates/releases/2.9.0/">2.9.0</a> (2.7.1)</td>
+      <td><a href="http://download.eclipse.org/modeling/m2t/xpand/updates/releases/R201605260315">2.2.0</a> (1.4)</td>
+      <td><a href="http://download.eclipse.org/releases/photon/201806271001">4.8.0</a> (4.7.3)</td>
+      <td><a href="http://download.eclipse.org/releases/photon/201806271001">Photon</a></td>
+    </tr>
+    <tr>
+      <td><a href="http://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.13.0/">2.13.0</a></td>
+      <td><a href="http://download.eclipse.org/releases/oxygen/201804111000">2.13.0</a> (2.12.0)</td>
+      <td><a href="http://download.eclipse.org/modeling/emft/mwe/updates/releases/2.9.0/">2.9.0</a> (2.7.1)</td>
+      <td><a href="http://download.eclipse.org/modeling/m2t/xpand/updates/releases/R201605260315">2.2.0</a> (1.4)</td>
+      <td><a href="http://download.eclipse.org/releases/oxygen/201804111000">4.7.0</a> (3.6)</td>
+      <td><a href="http://download.eclipse.org/releases/oxygen/201804111000">Oxygen.3a</a></td>
+    </tr>
+    <tr>
+      <td><a href="http://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.12.0/">2.12.0</a></td>
+      <td><a href="http://download.eclipse.org/releases/oxygen/201804111000">2.13.0</a> (2.12.0)</td>
+      <td><a href="http://download.eclipse.org/modeling/emft/mwe/updates/releases/2.9.0/">2.9.0</a> (2.7.1)</td>
+      <td><a href="http://download.eclipse.org/modeling/m2t/xpand/updates/releases/R201605260315">2.2.0</a> (1.4)</td>
+      <td><a href="http://download.eclipse.org/releases/oxygen/201804111000">4.7.0</a> (3.6)</td>
+      <td><a href="http://download.eclipse.org/releases/oxygen/201804111000">Oxygen.3a</a></td>
+    </tr>
     <tr>
       <td><a href="http://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.11.0/">2.11.0</a></td>
       <td><a href="http://download.eclipse.org/releases/neon/201606221000">2.12.0</a> (2.12.0)</td>
